# canonical

./: CMakeLists.txt  README.md  canonicalinterface.cpp  canonicalinterface.h  main.cpp  uciiparser.cpp  uciiparser.h
